<resources>
    <string name="app_name">StashBusters</string>
    <string name="stashbusters_headline">StashBusters</string>

    <string name="stash_panel">Stash Panel</string>
    <string name="stash_swap">Stash Swap</string>
    <string name="snack_busting">Snack Busting</string>

    <string name="login_screen_wallpaper">login screen wallpaper</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="world_feed">World Feed</string>
    <string name="my_feed">My Feed</string>
    <string name="my_profile">My Profile</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="snackbusters">SnackBusters</string>


    <!--    Strings for new post activities-->
    <string name="stash_panel_n">Stash\nPanel</string>
    <string name="stash_swap_n">Stash\nSwap</string>
    <string name="snack_busting_n">Snack\nBusting</string>

    <string name="new_post">New Post</string>
    <string name="new_panel_post">New Stash Panel Post</string>
    <string name="new_swap_post">New Stash Swap Post</string>
    <string name="new_snack_post">New Snack Busting Post</string>
    <string name="post">POST!</string>

    <string name="post_title">Post Title</string>
    <string name="title_hint">What advice do you need? (100 char. limit)</string>
    <string name="material_photo">Photo of Material</string>
    <string name="material_type">Material Type</string>
    <string name="zip_code">Zip Code</string>
    <string name="swap_material">Willing to swap for:</string>
    <string name="description">Description</string>
    <string name="description_hint">Describe the material, your interests, and anything else that
        might help others give you good advice! (500 char. limit)</string>

    <string name="swap_title_hint">An eye-catching headline! (100 char. limit)</string>
    <string name="swap_description_hint">Describe the material and share any additional
        helpful information! (500 char. limit)</string>
    <string name="desired_swap">Desired Swap Item</string>
    <string name="desired_swap_hint">What do you want to swap for? (50 char. limit)</string>

    <string name="question">Your Question</string>
    <string name="choice_one">Choice One</string>
    <string name="choice_two">Choice Two</string>
    <string name="twenty_char">20 char. limit</string>

    <!-- Strings for snack busting activity -->
    <string name="no_more_snacks">Uh-oh!\nThere are no more snacks!</string>
    <string name="swipe_to_vote"><![CDATA[← swipe to vote →]]></string>
    <string name="snack_bust_title">Snack Busting!</string>
    <string name="snack_bust_tag">Help other crafters make quick decisions!\nSimply swipe to vote.</string>
    <string name="snack_start">Tap the cookie to start!</string>

    <!-- Strings for stash panel and swap posts -->
    <string name="advice_hint">Give your suggestion here! (100 char. limit)</string>
    <string name="swap_hint">What are you willing to swap for? (100 char. limit)</string>
    <string name="offer_hint">Make an offer! (100 char. limit)</string>
    <string name="submit">Submit!</string>
    <string name="swapped">SWAPPED! This swap is no longer available.</string>

    <string name="delete_post">Delete</string>
    <string name="edit_post">Edit Post</string>

    <string name="let_s_go">Save</string>
    <string name="describe_yourself_hint">Describe yourself and what you do in 150 characters or less</string>
    <string name="edit_your_bio">Edit your bio</string>
    <string name="add_profile_picture_button">add profile picture button</string>
    <string name="choose_a_new_profile_picture">Choose a new profile picture</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="enter_your_username_and_password">Enter your username and password</string>
    <string name="add_a_bio">Add a bio</string>
    <string name="upload_a_profile_photo">Upload a profile photo</string>
    <string name="password_hint_short">Password should be 8-16 characters</string>
    <string name="choose_a_password">Choose a password</string>
    <string name="choose_a_username">Choose a username</string>
    <string name="follower_count_default"># Followers</string>
    <string name="follower_count">%1$s Followers</string>
    <string name="following_text">Following</string>
    <string name="follow_text">Follow</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="liked_posts">Liked Posts</string>
    <string name="my_posts">My Posts</string>
    <string name="no_posts">You don\'t currently have any %1$s posts. %2$s a post to see it here!</string>
    <string name="username_filler">username</string>
    <string name="default_profile_picture">default profile picture</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_email_address_and_password">Enter your email address and password</string>
    <string name="email_address">Email Address</string>

    <string name="mark_swap_as_complete">MARK SWAP AS COMPLETE</string>
    <string name="mark_swap_as_available">MARK SWAP AS AVAILABLE</string>


    <string name="no_posts_feed">Follow other users\n to see posts in your feed!</string>
    <string name="like_count">%1$d Likes</string>
    <string name="profile_owner">\'s Profile</string>


</resources>