<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ic_palette"
        android:enabled="true"
        android:icon="@drawable/palette_icon"
        android:title="@string/my_feed"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ic_world"
        android:enabled="true"
        android:icon="@drawable/world_icon"
        android:title="@string/world_feed"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ic_pencil"
        android:enabled="true"
        android:icon="@drawable/new_post_icon"
        android:title="@string/new_post"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ic_mouse"
        android:enabled="true"
        android:icon="@drawable/mouse_icon"
        android:title="@string/my_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ic_snack"
        android:enabled="true"
        android:icon="@drawable/cookie_icon"
        android:title="@string/snackbusters"
        app:showAsAction="ifRoom" />

</menu>