<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/user_info_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/buttonPanel"
            android:background="@color/colorSurface"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/username_display"
                style="@style/PostHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_filler"/>

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/default_profile_picture"
                android:src="@drawable/mouse_icon"/>

            <TextView
                android:id="@+id/follower_count"
                style="@style/Detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follower_count_default"/>

            <TextView
                android:id="@+id/bio"
                style="@style/Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:layout_marginTop="32dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPanel"
            android:layout_above="@id/post_view_area"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">


            <Button
                android:id="@+id/followButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/follow_user"
                android:theme="@style/ButtonText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/post_view_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/navigationBar"
            android:background="@color/colorSurfaceDark"/>



        <com.google.android.material.bottomnavigation.BottomNavigationView
            xmlns:app="http://schema.android.com/apk/res/res-auto"
            android:id="@+id/navigationBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@color/colorSecondaryLight"
            app:menu="@menu/bottom_navigation_menu"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>